--- a/src/scss/app/app.scss
+++ b/src/scss/app/app.scss
@@ -11,12 +11,6 @@
   background-color: white;
 }
 
-body {
-  background: linear-gradient(to bottom, #f82462 0%,#f82462 31%,#ffffff 32%);
-  background: linear-gradient(to right, blue 50%, yellow 50%);
-  background: #f82462;
-}
-
 .app-content {
   flex: 1;
   flex-shrink: 0;
@@ -26,6 +20,8 @@ body {
   justify-content: flex-start;
   padding: $navbar-height-lg 0 0;
   width: 100%;
+  z-index: 3;
+  background: white;
 
   & > * {
     width: 100%;
