--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -115,6 +115,15 @@ input::-webkit-input-placeholder {
   Common classes
  */
 
+.back-header {
+  width: 100%;
+  height: 800px;
+  top: -600px;
+  position: absolute;
+  z-index: 0;
+  background-color: #f82462;
+}
+
 .social-buttons {
   display: flex;
 
