--- a/src/scss/pages/dashboard/order-history.scss
+++ b/src/scss/pages/dashboard/order-history.scss
@@ -51,6 +51,8 @@
           display: grid;
           font-size: 16px;
           color: #252525;
+          width: 100%;
+
           .brand-model {
             font-weight: 600;
           }
