identity verification ui complete

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -28,6 +28,7 @@
 @import 'pages/about';
 @import 'pages/login';
 @import 'pages/register';
+@import 'pages/identity-verification';
 @import 'pages/dashboard';
 @import 'pages/dashboard/order-history';
 @import 'pages/dashboard/payment-dashboard';
