--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -2,6 +2,10 @@ html, body, .container {
   height: 100%;
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -10,6 +14,7 @@ body {
   color: $secondary-color;
   font-size: 16px;
   zoom: 0.9;
+  overflow: auto;
 }
 
 a, a:hover {
