--- a/src/scss/pages/home-responsive.scss
+++ b/src/scss/pages/home-responsive.scss
@@ -670,6 +670,10 @@
       order: 1;
     }
   }
+  .cookieConsent button {
+    width: 90%;
+    margin: 15px auto;
+  }
 }
 
 @media(min-width: 318px) {
