--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -74,7 +74,7 @@ footer {
       padding: 15px 0;
     }
     ul {
-      padding: 15px 0;
+      padding: 10px 0;
     }
   }
 
@@ -94,6 +94,7 @@ footer {
         .email {
           margin-left: 15px;
           cursor:pointer;
+          color: #F82462;
         }
       }
       i {
@@ -138,7 +139,7 @@ footer {
   }
 
   .Social-contects {
-    padding: 30px 0;
+    padding: 40px 0;
     border-top: solid 1px #f8f8f8;
     margin-bottom: 0 !important;
     background-color: white;
