order modal update

--- a/src/scss/pages/dashboard/order-history.scss
+++ b/src/scss/pages/dashboard/order-history.scss
@@ -1,7 +1,8 @@
 /* order history order pickup, rating modal */
 .order-modal {
   width: 100%;
-  max-width: 100vh !important;
+  max-width: 1200px !important;
+
   .order-modal-header {
     text-align: center;
     padding: 60px 80px 40px;
