--- a/src/scss/pages/dashboard.scss
+++ b/src/scss/pages/dashboard.scss
@@ -211,8 +211,7 @@
          }
          .upload-photo-row {
            .file-input-container {
-             cursor: pointer;
-             button, input {
+             input {
                cursor: pointer;
              }
            }
