--- a/src/scss/pages/identity-verification.scss
+++ b/src/scss/pages/identity-verification.scss
@@ -5,7 +5,7 @@
   min-height: 45vw;
   justify-content: center;
   width: 65vw;
-  margin: 0 auto;
+  margin: 60px auto 0;
 
   button {
     width: 230px;
