--- a/src/scss/pages/payment.scss
+++ b/src/scss/pages/payment.scss
@@ -232,7 +232,7 @@
 
         &.active {
           background-color: #1cdb74 !important;
-          color: #FAF5EC;
+          color: #FAF5EC !important;
           z-index: 1000;
           border-radius: 4px;
         }
