--- a/src/scss/pages/addgear.scss
+++ b/src/scss/pages/addgear.scss
@@ -69,7 +69,7 @@
       border: 0;
       padding: 5px 10px 5px;
       opacity: 1;
-      border-bottom: 1px solid lightgrey;
+      border-bottom: 1px solid #EAEAEA;
       color: #98989b !important;
       left: 0;
       top: 0;
@@ -124,7 +124,7 @@
       position: relative;
 
       &:before {
-        left: -35%;
+        left: -36%;
       }
       i {
         font-size: 35px;
@@ -254,7 +254,7 @@
   .add-gear-photos {
     display: flex;
     flex-direction: column;
-    border: 1px dashed lightgray;
+    border: 1px dashed #EAEAEA;
     min-height: 300px;
     width: 100%;
     max-width: 600px;
@@ -282,7 +282,7 @@
     justify-content: space-between;
     padding-bottom: 15px;
     margin-bottom: 15px;
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid #EAEAEA;
     align-items: baseline;
 
     & > div {
@@ -510,6 +510,7 @@
       width: 100%;
       outline: none;
       height: 45px;
+      border: solid 1px #EAEAEA !important;
     }
   }
 }
@@ -532,7 +533,7 @@
 
 .category_description_ta {
   width: 91%;
-  border: 1px solid rgb(204, 204, 204);
+  border: 1px solid #EAEAEA;
   height: 97%;
   padding-top: 25px;
 
@@ -982,7 +983,7 @@
         padding: 10px;
 
         &.theme-btn-secondery {
-          border: 1px solid lightgrey;
+          border: 1px solid #EAEAEA;
         }
 
         .hide-bigscreen {
