--- a/src/scss/pages/editgear.scss
+++ b/src/scss/pages/editgear.scss
@@ -101,7 +101,7 @@
               border: 0;
               padding: 5px 10px 5px;
               opacity: 1;
-              border-bottom: 1px solid lightgrey;
+              border-bottom: 1px solid #eaeaea;
               color: #98989b !important;
               left: 0;
               top: 0;
@@ -171,7 +171,7 @@
                 background: white;
                 color: orange;
                 padding: 5px 15px;
-                border: 1px solid lightgray;
+                border: 1px solid #eaeaea;
                 display: inline-block;
                 border-radius: 30px;
                 margin-right: 5px;
