--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -124,7 +124,7 @@ a.forgot-pwd-link {
   margin-top: 18px;
 }
 .auth-input-wrapper {
-  div {
+  & > div {
     width: 100%;
     font-family: Helvetica Neue;
     font-size: 16px;
