--- a/src/scss/pages/rent-gear-detail.scss
+++ b/src/scss/pages/rent-gear-detail.scss
@@ -452,6 +452,13 @@
   margin-bottom: 5px;
   font-size: 13px;
 }
+.warning-span {
+  background-color: #f82462;
+  color: white;
+  padding: 3px 10px;
+  font-weight: 600;
+  border-radius: 5px;
+}
 
 .verification-modal {
   .confirm-body {
